--- a/Server/WCFServer/LocationWCF/AppConfig（四会）/App.config
+++ b/Server/WCFServer/LocationWCF/AppConfig（四会）/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.45" />
+    <add key="ClientVersionCode" value="1.0.48" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.21" />
+    <add key="ServerVersionCode" value="1.0.28" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -128,8 +128,17 @@
     <!--记录定位信息-->
     <add key="LogPostionRawInfo" value="True"/>
     <!--记录Web通信信息-->
-    <add key="LogCommunictionInfo" value="True"/>
-
+    <add key="LogCommunictionInfo" value="True" />
+    <!--是否将设备告警提取到内存中-->
+    <add key="EnableDevAlarmBuffer" value="True" />
+    <!--日志显示最大字符串长度-->
+    <add key="LogTextBoxMaxLength" value="10000" />
+    <!--移动的最大速度，超过这个速度，作为错误点。0则不排除错误点-->
+    <add key="MoveMaxSpeed" value="20" />
+    <!--启动时清理一些当天的数据-->
+    <add key="FilterTodayWhenStart" value="True" />
+    <!--定时删除超过该速度的（错误）点-->
+    <add key="FilterMoreThanMaxSpeedTimer" value="04:00" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -201,6 +210,7 @@
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+    </providers>
   </entityFramework>
   <log4net>
     <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
@@ -254,6 +264,30 @@
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
       <probing privatePath="Assemblies;Assemblies/System;Assemblies/Microsoft;Assemblies/SQLite;Assemblies/NOPI" />
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
