--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Locations\Services\IEntityService.cs" />
     <Compile Include="Locations\Services\LocationAlarmService.cs" />
     <Compile Include="Locations\Services\PhysicalTopologyService.cs" />
+    <Compile Include="Locations\Services\PictureService.cs" />
     <Compile Include="Locations\Services\SimpleSerivces\AreaAuthorizationRecordService.cs" />
     <Compile Include="Locations\Services\SimpleSerivces\AreaAuthorizationService.cs" />
     <Compile Include="Locations\Services\AreaService.cs" />
