--- a/Service/WebApiService/WebApiService.csproj
+++ b/Service/WebApiService/WebApiService.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Controllers\AreaAuthorizationRecordController.cs" />
     <Compile Include="Controllers\AreaController.cs" />
     <Compile Include="Controllers\BaseDataSimulatorController.cs" />
+    <Compile Include="Controllers\CameraAlarmController.cs" />
     <Compile Include="Controllers\CardRoleController.cs" />
     <Compile Include="Controllers\ConfigArgController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
@@ -193,6 +194,8 @@
     <Compile Include="Controllers\LocationAlarmController.cs" />
     <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Controllers\PhysicalTopologyController.cs" />
+    <Compile Include="Controllers\PictureController.cs" />
+    <Compile Include="Controllers\PosHistoryController.cs" />
     <Compile Include="Controllers\PositionController.cs" />
     <Compile Include="Controllers\PositionHistoryController.cs" />
     <Compile Include="Controllers\PostController.cs" />
