--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.48" />
+    <add key="ClientVersionCode" value="1.0.49" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.28" />
+    <add key="ServerVersionCode" value="1.0.29" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -91,7 +91,7 @@
     <add key="NVRUser" value="Admin" />
     <add key="NVRPass" value="1111add" />
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="True" />
+    <add key="StartDaemon" value="False" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
