--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -13,9 +13,9 @@
     <add key="DebugMode" value="True" />
 
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.53" />
+    <add key="ClientVersionCode" value="1.0.54" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.32" />
+    <add key="ServerVersionCode" value="1.0.33" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
 
@@ -49,8 +49,8 @@
     <add key="DbSourceType" value="MySql" />
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="ShowSqlLog" value="0" />
-    <!--厂区名称（根结点名称）四会热电厂/宝钢园区 -->
-    <add key="ParkName" value="四会热电厂" />
+    <!--厂区名称（根结点名称）四会热电厂/宝钢园区/淄博电厂 -->
+    <add key="ParkName" value="淄博电厂" />
     <!--初始化拓扑结点时位置偏移，宝钢项目时和品铂直接的原点差距,四会 0,0, 宝钢 (+86.4517,-3.048) -->
     <add key="InitTopoOffset" value="0,0" />
     <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝钢 100，改动太多了，先不动 -->
