--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -160,12 +160,14 @@
     <Compile Include="Locations\Services\AlarmService.cs" />
     <Compile Include="Locations\Services\BaseDataService.cs" />
     <Compile Include="Locations\Services\CameraAlarmService.cs" />
+    <Compile Include="Locations\Services\CardRoleService.cs" />
     <Compile Include="Locations\Services\ConfigArgService.cs" />
     <Compile Include="Locations\Services\DevService.cs" />
     <Compile Include="Locations\Services\IEntityService.cs" />
     <Compile Include="Locations\Services\LocationAlarmService.cs" />
     <Compile Include="Locations\Services\PhysicalTopologyService.cs" />
     <Compile Include="Locations\Services\PictureService.cs" />
+    <Compile Include="Locations\Services\PositionService.cs" />
     <Compile Include="Locations\Services\SimpleSerivces\AreaAuthorizationRecordService.cs" />
     <Compile Include="Locations\Services\SimpleSerivces\AreaAuthorizationService.cs" />
     <Compile Include="Locations\Services\AreaService.cs" />
@@ -180,6 +182,7 @@
     <Compile Include="Locations\Services\SimpleSerivces\TagRoleService.cs" />
     <Compile Include="Locations\Services\TagService.cs" />
     <Compile Include="Locations\Services\UserService.cs" />
+    <Compile Include="Locations\Services\WorkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHostHelper.cs" />
     <Compile Include="Tools\ConvertHelper.cs" />
