--- a/DAL/DAL/App.config
+++ b/DAL/DAL/App.config
@@ -1,56 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework"
-    type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-    requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <entityFramework>
     <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />-->
-    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6"/>
+    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6"/>
-      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6"/>
-    <provider invariantName="MySql.Data.MySqlClient"
-        type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="System.Data.SQLite.EF6"/>
-      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6"
-        description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6"/>
-      <remove invariant="System.Data.SQLite"/>
-      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite"
-        type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite"/>
-      <remove invariant="MySql.Data.MySqlClient"/>
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"
-        type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="DefaultConnection"
-      connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True"
-      providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="topviewxp_SqlServer" connectionString="Server=127.0.0.1,1433;Database=topviewxp;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />-->
-    <add name="Location_SqlServer" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;"
-      providerName="System.Data.SqlClient"/>
-    <add name="LocationHistory_SqlServer"
-      connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;"
-      providerName="System.Data.SqlClient"/>
-    <add name="Location_MySql"
-      connectionString="Data Source=localhost;port=3306;Initial Catalog=Location;user id=root;password=123456;charset=utf8;Convert Zero Datetime=True;Allow Zero Datetime=True;"
-      providerName="MySql.Data.MySqlClient"/>
-    <add name="LocationHistory_MySql"
-      connectionString="Data Source=localhost;port=3306;Initial Catalog=LocationHistory;user id=root;password=123456;charset=utf8;Convert Zero Datetime=True;Allow Zero Datetime=True;"
-      providerName="MySql.Data.MySqlClient"/>
+    <add name="Location_SqlServer" connectionString="Server=127.0.0.1,1433;Database=Location;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="LocationHistory_SqlServer" connectionString="Server=127.0.0.1,1433;Database=LocationHistory;Persist Security Info = true;User ID = sa;Password = 123456;" providerName="System.Data.SqlClient" />
+    <add name="Location_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=Location;user id=root;password=123456;charset=utf8;Convert Zero Datetime=True;Allow Zero Datetime=True;" providerName="MySql.Data.MySqlClient" />
+    <add name="LocationHistory_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=LocationHistory;user id=root;password=123456;charset=utf8;Convert Zero Datetime=True;Allow Zero Datetime=True;" providerName="MySql.Data.MySqlClient" />
     <!--<add name="topviewxp_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=topviewxp;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />-->
-    <add name="EngineLite" connectionString="Data Source=Data\engine.db" providerName="System.Data.SQLite.EF6"/>
-    <add name="Location_SQLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6"/>
-    <add name="LocationHistory_SQLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6"/>
-    <add name="BaseData_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=basedata;user id=root;password=123456;charset=utf8;"
-      providerName="MySql.Data.MySqlClient"/>
+    <add name="EngineLite" connectionString="Data Source=Data\engine.db" providerName="System.Data.SQLite.EF6" />
+    <add name="Location_SQLite" connectionString="Data Source=Data\location.db" providerName="System.Data.SQLite.EF6" />
+    <add name="LocationHistory_SQLite" connectionString="Data Source=Data\locationHis.db" providerName="System.Data.SQLite.EF6" />
+    <add name="BaseData_MySql" connectionString="Data Source=localhost;port=3306;Initial Catalog=basedata;user id=root;password=123456;charset=utf8;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
